@@ -62,18 +62,21 @@ func newServer(config Config, publish successCallback) *http.Server {
 	}
 }
 
-func start(server *http.Server, ssl *SSLConfig) {
+func run(server *http.Server, ssl *SSLConfig) error {
+	logp.Info("starting apm-server! Hit CTRL-C to stop it.")
 	if ssl.isEnabled() {
-		go server.ListenAndServeTLS(ssl.Cert, ssl.PrivateKey)
+		return server.ListenAndServeTLS(ssl.Cert, ssl.PrivateKey)
 	} else {
-		go server.ListenAndServe()
+		return server.ListenAndServe()
 	}
 }
 
-func stop(server *http.Server) error {
+func stop(server *http.Server) {
 	c := context.TODO()
 	err := server.Shutdown(c)
-	return err
+	if err != nil {
+		logp.Err(err.Error())
+	}
 }
 
 type handler func(w http.ResponseWriter, r *http.Request)
