@@ -15,6 +15,8 @@ https://github.com/elastic/apm-server/compare/x...master[View commits]
 - changed `context.system.title` to `context.system.process_title`, removed `transaction.context`, `trace.context` (already available on top level). {pull}10[10]
 - changed type of `context.request.body` from `object` to `text`. {pull}27[27]
 - incoming transactions and errors could reuse data from previous POSTs due to payload state being kept in processors {pull}98[98].
+- forced apm-server to stop if/when the underlying http server is not running. Exit code is 0 for SIGINT / SIGTERM, 1 otherwise. {pull}94[94]
+
 
 ==== Added
 
